[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GameManager/ResultsScreen.gd" type="Script" id=1]

[node name="ResultsScreen" type="Spatial"]
script = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( -1.31134e-07, 0, 1, 0, 3, 0, -3, 0, -4.37114e-08, -0.0132189, 0, 3.04532 )

[node name="EnemiesLabel" type="Label3D" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0709379, 0.389179, 1.55468 )
text = "ENEMIES ROUTED: "
__meta__ = {
"_editor_description_": ""
}

[node name="ChipsLabel" type="Label3D" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0709379, -0.00622559, 1.55468 )
text = "CHIPS COLLECTED:"
__meta__ = {
"_editor_description_": ""
}

[node name="RoboBoisLabel" type="Label3D" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0709379, -0.383502, 1.55468 )
text = "ROBO BOIS SAVED:"
__meta__ = {
"_editor_description_": ""
}

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( -1.31134e-07, 0, 1, 0, 3, 0, -3, 0, -4.37114e-08, -0.0132191, 0, -2.95468 )

[node name="RankLabel" type="Label3D" parent="CSGBox2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.06759, -0.00622559, 1.55468 )
pixel_size = 0.0373
text = "RANK
S"
__meta__ = {
"_editor_description_": ""
}
